// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FieldHelper rendering renders expected elements 1`] = `
<div
  className="FieldHelper"
  id="test"
>
  Test
</div>
`;

exports[`FieldHelper rendering renders expected elements when error is set 1`] = `
<div
  className="FieldHelper error"
  id="test"
>
  Error
</div>
`;

exports[`FieldHelper rendering renders expected elements when text is not set 1`] = `
<div
  className="FieldHelper"
  id="test"
>
   
</div>
`;
